app2/backend_v1.yaml
---
# 3. BACKEND: Version 1 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: istio-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - name: backend
        image: ghcr.io/stefanprodan/podinfo:6.11.2
        image: mccutchen/go-httpbin:latest
        ports:
        - containerPort: 8080 # Explicitly declared for KIA0701
