app2/frontend_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: istio-lab
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9898
    nodePort: 30012
    name: http-frontend # Explicitly named for KIA0601
  selector:
    app: frontend
