app2/destination_rule.yaml

# 3. DestinationRule (Subsets & Anomaly Detection)
# This configuration defines "Subsets" (v1 vs v2) and 
# implements Outlier Detection (Anomaly Detection) to eject "sick" instances from the load balancer.

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: backend-dr
  namespace: istio-lab
spec:
  host: backend-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 100
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 30s
      baseEjectionTime: 1m
      maxEjectionPercent: 50
