app2/virtual_service.yaml
# 4. VirtualService (Traffic Splitting & Fault Injection)
# This directs 90% of traffic to v1 and 10% to v2,
#  while injecting a fixed delay (Fault Injection) for a specific user.

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-vs
  namespace: istio-lab
spec:
  hosts:
  - backend-svc
  http:
  - match:
    - headers:
        end-user:
          exact: qa-tester
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 5s
    route:
    - destination:
        host: backend-svc
        subset: v2
  - route:
    - destination:
        host: backend-svc
        subset: v1
      weight: 50
    - destination:
        host: backend-svc
        subset: v2
      weight: 50
